@@ -17,7 +17,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -34,7 +33,7 @@ public class PassengerServiceImpl implements PassengerService {
         Page<User> page = userRepository.findByRole(RoleEnum.USER, pageable);
         List<UserResponse> passengers = page.getContent().stream()
                 .map(UserMapper.INSTANCE::userToUserResponse)
-                .collect(Collectors.toList());
+                .toList();
         PaginatedAndSortedPassengerResponse passengerResponse = new PaginatedAndSortedPassengerResponse();
         passengerResponse.setContent(Collections.singletonList(passengers));
         passengerResponse.setPageNumber(page.getNumber());
